<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.funix.prm391x.se00255x.funix.LoginActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="202dp"
        android:layout_height="113dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/funix_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/funix_logo" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:background="@color/editTextBg"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:labelFor="@id/edt_username"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:background="@color/editTextBg"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:labelFor="@id/edt_password"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_username" />

    <EditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:background="@color/editTextBg"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:labelFor="@id/edt_confirm_password"
        android:visibility="gone"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <Button
        android:id="@+id/btn_left"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <Button
        android:id="@+id/btn_right"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <TextView
        android:id="@+id/txv_rule"
        android:layout_width="283dp"
        android:layout_height="28dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/rule"
        android:visibility="gone"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_confirm_password"
        tools:text="@string/rule"
        tools:ignore="SmallSp" />

</android.support.constraint.ConstraintLayout>
